--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -63,7 +63,7 @@ jobs:
             sudo docker compose stop
             sudo docker compose rm infra_backend
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra_frontend
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra_backend
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra_backend:latest
             rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
