--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -18,6 +18,13 @@ services:
     env_file:
       - ./.env
 
+  frontend:
+    image: maddarko/foodgram-frontend:latest
+    volumes:
+      - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -31,6 +38,7 @@ services:
       - media_value:/var/html/media/
     depends_on:
       - backend
+      - frontend
 
 volumes:
   postgres_data:
