--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -45,7 +45,7 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/infra_backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-back:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -61,8 +61,8 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker compose stop
-            sudo docker compose rm infra_backend
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra_backend:latest
+            sudo docker compose rm foodgram-back
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-back:latest
             rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
