--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./.env
 
   backend:
-    image: maddarko/infra_backend
+    image: maddarko/infra_backend:latest
     restart: always
     volumes:
       - static_value:/code/static/
