--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -46,6 +46,14 @@ jobs:
           file: ./backend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-back:latest
+      - name: Push frontend to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: frontend/
+          no-cache: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-front:latest
+
 
   deploy:
     runs-on: ubuntu-latest
@@ -63,6 +71,7 @@ jobs:
             sudo docker compose stop
             sudo docker compose rm foodgram-back
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-back:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-front:latest
             rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
